# discogs-even-wear-shuffle

./: .env.template  .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/src/even_wear_shuffle/: discogs_api_check.py  exporter.py  processor.py
backend/src/even_wear_shuffle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_processor.py
backend/tests/fixtures/: discogs_response_page_1_50perpage_full.json  discogs_response_page_2_50perpage_full.json  discogs_response_page_3_50perpage_only3releases.json  malformed_releases.json
docs/: devlog.txt  spec.md
scripts/: csv_exporter.py  processor.py
scripts/tests/: discogs_api_check.py
